--- a/galeria.html
+++ b/galeria.html
@@ -5,35 +5,72 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BlueLadel</title>
-    <link href="Estilos/estilos.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="estilos.css"> <!-- Agregar la referencia al archivo CSS -->
 </head>
-<body class="content" background="Imagenes/fondo.jpg" style="background-size: cover;"> 
-    <header> <!-- en esta seccion esta el logo de la pagina -->
-        <a href="index.html"   class="logo">
-            <img name="logo" src="Imagenes/Logo.png" alt="Logo" />
-            <h1 class="titulo" name="titulo">𝕭𝖑𝖚𝖊 𝕷𝖆𝖇𝖊𝖑</h1>
+
+<!------------------------------------------------------------------------------------------------------------->
+<!------------------------------------------------------------------------------------------------------------->
+
+<body class="content" background="Imagenes/fondo.jpg" style="background-size: 100%;">
+<!--                       Es la imagen de fondo del sitio                        -->    
+    
+<!------------------------------------------------------------------------------------------------------------->
+<!--                                                NavBar                                                   -->
+
+<nav class="navbar navbar-expand-lg" style="background-color: #a07f5e;">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="Imagenes/Logo.png">
+            <img src="Imagenes/Logo.png" width="60" height="60"/>
         </a>
-        <nav >
-            <ul>
-                <li>
-                    <a href="galeria.html">
-                        <button  href="galeria.html" class="button">GALERÍA</button>
-                    </a>
-                </li>
-                <li>
-                    <a href="login.html">
-                        <!-- saque este boton de una pagina la cual muestra botones es este el link-->
-                        <!-- https://uiverse.io/akshat-patel28/brown-panther-60 -->
-                        <button href="login.html" class="button">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="0" fill="currentColor" stroke="currentColor" class="icon">
-                                <path d="M12 2.5a5.5 5.5 0 0 1 3.096 10.047 9.005 9.005 0 0 1 5.9 8.181.75.75 0 1 1-1.499.044 7.5 7.5 0 0 0-14.993 0 .75.75 0 0 1-1.5-.045 9.005 9.005 0 0 1 5.9-8.18A5.5 5.5 0 0 1 12 2.5ZM8 8a4 4 0 1 0 8 0 4 4 0 0 0-8 0Z"></path>
-                            </svg>
-                        </button>
-                    </a>
-                </li>
-            </ul>
-        </nav>
-    </header>
+        <a class="navbar-brand" href="index.html">
+            <h1>𝕭𝖑𝖚𝖊 𝕷𝖆𝖇𝖊𝖑</h1>
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup" >
+            <div class="navbar-nav">
+                <a class="nav-link text-center" href="galeria.html" ><h2>𝔊𝔞𝔩𝔢𝔯𝔦𝔞</h2></a>
+                <a class="nav-link text-center" href="login.html" >
+                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+                        <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
+                        <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
+                    </svg>
+                </a>
+            </div>
+        </div>
+    </div>
+</nav>
+
+<!------------------------------------------------------------------------------------------------------------->
+<!--                                             carousel                                                    -->
+
+<div id="carouselExample" class="carousel slide">
+    <div class="carousel-inner">
+    <div class="carousel-item active">
+        <img src="Imagenes/carruselgaleria1.jpg" class="d-block w-100" alt="Imagen no encontrada">
+    </div>
+    <div class="carousel-item">
+        <img src="Imagenes/carruselgaleria2.jpg" class="d-block w-100" alt="Imagen no encontrada">
+    </div>
+    <div class="carousel-item">
+        <img src="Imagenes/carruselgaleria3.jpg" class="d-block w-100" alt="Imagen no encontrada">
+    </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+    </button>
+</div>
+
+<!------------------------------------------------------------------------------------------------------------->
+
+
     <main>
         <div class="galeria">
             <div class="alcohol">
@@ -104,13 +141,26 @@
             </div>
         </div>
     </main>
-    <footer>
-        <p >Copyright © 2024 Empresaurios. Todos los derechos reservados. Esta página web y
-            todo su contenido son propiedad de Empresaurios y su creador Chrystopher Silva, 
-            .Para solicitudes de permisos, contáctenos a <a href="mailto:contacto@empresaurios.com">
-            contacto@empresaurios.com</a>. El nombre y el logotipo de Empresaurios son marcas 
-            registradas y no pueden ser utilizados sin previa autorización por escrito.
-        </p>
+<!------------------------------------------------------------------------------------------------------------->
+<!--                                          Footer                                                         -->   
+
+<nav>
+    <footer class="p-4 text-center end-bottom" style="background-color: #a07f5e;">
+        <div>
+            <h4 class="card-title">Asignatura: Programación en Front-End</h4>
+            <p class="card-text">Copyright © 2024 Empresaurios. Todos los derechos reservados. Esta página web y
+                todo su contenido son propiedad de Empresaurios y su creador Chrystopher Silva, 
+                .Para solicitudes de permisos, contáctenos a <a href="mailto:contacto@empresaurios.com">
+                contacto@empresaurios.com</a>. El nombre y el logotipo de Empresaurios son marcas 
+                registradas y no pueden ser utilizados sin previa autorización por escrito.
+            </p>
+        </div>
     </footer>
+</nav>
+
+<!------------------------------------------------------------------------------------------------------------->
+<!------------------------------------------------------------------------------------------------------------->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
 </body>
 </html>
