--- a/galeria.html
+++ b/galeria.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BlueLadel</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="estilos.css"> <!-- Agregar la referencia al archivo CSS -->
+    <link rel="stylesheet" href="Estilos/estilos.css"> <!-- Agregar la referencia al archivo CSS -->
 </head>
+
 
 <!------------------------------------------------------------------------------------------------------------->
 <!------------------------------------------------------------------------------------------------------------->
@@ -69,93 +70,96 @@
 </div>
 
 <!------------------------------------------------------------------------------------------------------------->
+<!--                                              Galeria                                 -->
 
-
-    <main>
-        <div class="galeria">
-            <div class="alcohol">
-                <figure>
-                    <img src="Imagenes/blue lable.png" class="img" alt="descripcion">
-                    <figcaption>
-                    <h2>Bluelabel</h2>
-                    <p>Precio: $293.000</p>
-                    <p>Cantidad: <input type="number" value="6"></p>
-                    <p>Sabor a avellanas, miel, jerez y naranjas, para después liberar aromas de jengibre, quinoto, sándalo y chocolate negro. Es un Whisky extremadamente rico y ahumado.</p>
-                    </figcaption>
-                </figure>
-            </div>
-            <div class="alcohol">
-                <figure>
-                    <img src="Imagenes/cabernet.png"  alt="descripcion">
-                    <figcaption>
-                    <h2>Cabernet</h2>
-                    <p>Precio: $77.900</p>
+<div class="container p-4">
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col">
+            <div class="card h-100">
+                <h2>Cabernet</h2>
+                <p class="card-text">Precio: $77.900</p>
+                <img src="Imagenes/cabernet.png" class="card-img-top w-100" alt="Cabernet">
+                <div class="card-body">
                     <p>Cantidad: <input type="number" value="4"></p>
-                    <p>La Cabernet Sauvignon es una uva de un color muy oscuro y opaco, con tonos azulados y púrpuras, lo que hace que produzca vinos de un color rubí intenso.</p>
-                    </figcaption>
-                </figure>
-            </div>
-            <div class="alcohol">
-                <figure>
-                    <img src="Imagenes/macallan.png" class="box" alt="descripcion">
-                    <figcaption>
-                    <h2>Macallan</h2>
-                    <p>Precio: $250.990</p>
-                    <p>Cantidad <input type="number" value="1"></p>
-                    <p>frutas maceradas (piense en pasas, sultanas, naranjas y algunas manzanas guisadas empapadas en alcohol) y muchas especias festivas para hornear, como canela, jengibre, clavo y nuez moscada. Un cuerpo sorprendentemente ligero trae consigo ricos sabores. El chocolate amargo y la naranja se unen a esas frutas alcohólicas en la nariz.</p>
-                    </figcaption>
-                </figure>
-            </div>
-            <div class="alcohol">
-                <figure>
-                    <img src="Imagenes/vodka.png" alt="descripcion">
-                    <figcaption>
-                    <h2>Vodka Escoses</h2>
-                    <p>Precio: $99.990</p>
-                    <p>Cantidad: <input type="number" value="8"></p>
-                    <p>Encontrar palabras para describir el sabor de un vodka tan avanzado puede ser un esfuerzo para la paciencia y la imaginación de los escritores con más talento. Describir la suavidad de Vodka VALT es fácil por la única razón de que es única. De sabor a Dulce helado de vainilla con un final cálido, mantequilla batida.</p>
-                    </figcaption>
-                </figure>
-            </div>
-            <div class="alcohol">
-                <figure>
-                    <img src="Imagenes/wisky.png" class="box" alt="descripcion">
-                    <figcaption>
-                    <h2>Whisky</h2>
-                    <p>Precio: $25.000</p>
-                    <p>Cantidad: <input type="number" value="10"></p>
-                    <p>Un rico dulzor seca la fruta con nubes de humo y fuertes sabores a malta de cebada, cálidos e intensos. En el fondo de la boca hay una explosión de pimienta. Final: enorme, largo, final cálido y especiado con una dulzura tentadora.</p>
-                    </figcaption>
-                </figure>
-            </div>
-            <div class="alcohol">
-                <figure>
-                    <img src="Imagenes/tequila.png" alt="descripcion">
-                    <figcaption>
-                    <h2>Tequila Jose Cuervo</h2>
-                    <p>Precio: $17.000</p>
-                    <p>Cantidad: <input type="number" value="4"></p>
-                    <p>De color pajizo claro y tiene una esencia herbácea de agave. Su sabor es de agave cocido y frutas tropicales guisadas respaldadas por notas persistentes de vainilla, clavo, canela y caramelo. Tequila de producción familiar en lotes pequeños. Celebra una tradición familiar iniciada hace más de 200 años.</p>
-                    </figcaption>
-                </figure>
+                    <p class="card-text">La Cabernet Sauvignon es una uva de un color muy oscuro y opaco, con tonos azulados y púrpuras, lo que hace que produzca vinos de un color rubí intenso.</p>
+                </div>
             </div>
         </div>
-    </main>
+        <div class="col">
+            <div class="card h-100">                    
+                <h2>Macallan</h2>
+                <p class="card-text">Precio: $250.990</p>
+                <img src="Imagenes/macallan.png" class="card-img-top img-fluid" alt="Macallan">
+                <div class="card-body">
+
+                    <p>Cantidad: <input type="number" value="1"></p>
+                    <p class="card-text">Frutas maceradas (piense en pasas, sultanas, naranjas y algunas manzanas guisadas empapadas en alcohol) y muchas especias festivas para hornear, como canela, jengibre, clavo y nuez moscada. Un cuerpo sorprendentemente ligero trae consigo ricos sabores. El chocolate amargo y la naranja se unen a esas frutas alcohólicas en la nariz.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-100">
+                <h2>Vodka Escocés</h2>
+                <p class="card-text">Precio: $99.990</p>
+                <img src="Imagenes/vodka.png" class="card-img-top img-fluid" alt="Vodka Escoses">
+                <div class="card-body">                    
+                    <p>Cantidad: <input type="number" value="8"></p>
+                    <p class="card-text">Encontrar palabras para describir el sabor de un vodka tan avanzado puede ser un esfuerzo para la paciencia y la imaginación de los escritores con más talento. Describir la suavidad de Vodka VALT es fácil por la única razón de que es única. De sabor a dulce helado de vainilla con un final cálido, mantequilla batida.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-100">
+                <h2>Whisky</h2>
+                <p class="card-text">Precio: $25.000</p>
+                <img src="Imagenes/wisky.png" class="card-img-top" alt="Whisky">
+                <div class="card-body">                   
+                    <p>Cantidad: <input type="number" value="10"></p>
+                    <p class="card-text">Un rico dulzor seca la fruta con nubes de humo y fuertes sabores a malta de cebada, cálidos e intensos. En el fondo de la boca hay una explosión de pimienta. Final: enorme, largo, final cálido y especiado con una dulzura tentadora.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-100">
+                <h2>Tequila Jose Cuervo</h2>
+                <p class="card-text">Precio: $17.000</p>
+                <img src="Imagenes/tequila.png" class="card-img-top" alt="Tequila Jose Cuervo">
+                <div class="card-body">
+                    <p>Cantidad: <input type="number" value="4"></p>
+                    <p class="card-text">De color pajizo claro y tiene una esencia herbácea de agave. Su sabor es de agave cocido y frutas tropicales guisadas respaldadas por notas persistentes de vainilla, clavo, canela y caramelo. Tequila de producción familiar en lotes pequeños. Celebra una tradición familiar iniciada hace más de 200 años.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card h-100">                    
+                <h2>Bluelabel</h2>
+                <p class="card-text">Precio: $293.000</p>
+                <img src="Imagenes/blue label.png" class="card-img-top" alt="Bluelabel">
+                <div class="card-body">
+                    <p>Cantidad: <input type="number" value="6"></p>
+                    <p class="card-text">Sabor a avellanas, miel, jerez y naranjas, para después liberar aromas de jengibre, quinoto, sándalo y chocolate negro. Es un Whisky extremadamente rico y ahumado.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 <!------------------------------------------------------------------------------------------------------------->
 <!--                                          Footer                                                         -->   
 
 <nav>
-    <footer class="p-4 text-center end-bottom" style="background-color: #a07f5e;">
-        <div>
-            <h4 class="card-title">Asignatura: Programación en Front-End</h4>
-            <p class="card-text">Copyright © 2024 Empresaurios. Todos los derechos reservados. Esta página web y
-                todo su contenido son propiedad de Empresaurios y su creador Chrystopher Silva, 
-                .Para solicitudes de permisos, contáctenos a <a href="mailto:contacto@empresaurios.com">
-                contacto@empresaurios.com</a>. El nombre y el logotipo de Empresaurios son marcas 
-                registradas y no pueden ser utilizados sin previa autorización por escrito.
-            </p>
+    <div class="card text-center"style="background-color: #a07f5e;">
+        <div class="card-header">
+            <h4>Asignatura: Programación en Front-End</h4> 
         </div>
-    </footer>
+        <div class="card-body">
+        <p class="card-text">Copyright © 2024 Empresaurios. Todos los derechos reservados. Esta página web y
+            todo su contenido son propiedad de Empresaurios y su creador Chrystopher Silva, 
+            .Para solicitudes de permisos, contáctenos a <a href="mailto:contacto@empresaurios.com">
+            contacto@empresaurios.com</a>. El nombre y el logotipo de Empresaurios son marcas 
+            registradas y no pueden ser utilizados sin previa autorización por escrito.</p>
+        </div>
+    </div>
 </nav>
 
 <!------------------------------------------------------------------------------------------------------------->
