--- a/login.html
+++ b/login.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BlueLadel</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="estilos.css"> <!-- Agregar la referencia al archivo CSS -->
+    <link rel="stylesheet" href="Estilos/estilos.css"> <!-- Agregar la referencia al archivo CSS -->
 </head>
 
 <style>
-    /* imagen de fondo */
+    /* imagen de fondo del fromulario*/
     .login-container {
         background-image: url('imagenes/login.jpg');
         background-size: cover;
@@ -20,51 +20,7 @@
         justify-content: center;
         align-items: center;
     }
-
-    /* Estilos para el formulario */
-    .login-form {
-    display: block;
-    box-sizing: border-box;
-    padding: 40px;
-    width: 400px; /* Ancho de la caja sombreada */
-    height: 500px; /* Alto de la caja sombreada */
-    backdrop-filter: brightness(40%);
-    flex-direction: column;
-    display: flex;
-    gap: 20px; /* Espacio entre cada elemento */
-    background-position: center;
-    justify-content: center; /* Centrar verticalmente */
-    align-items: center; /* Centrar horizontalmente */
-}
-
-.login-heading {
-    font-weight: normal;
-    font-size: 24px;
-    text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5);
-    margin-bottom: 60px;
-    color: #ffffff; /* Cambiar color del texto */
-}
-
-.login-form label {
-    color: rgba(255, 255, 255, 0.8);
-    text-transform: uppercase;
-    font-size: 10px;
-    letter-spacing: 2px;
-    padding-left: 10px;
-}
-
-.login-form input {
-    background-color: rgba(255, 255, 255, 0.3);
-    height: 40px;
-    line-height: 40px;
-    border-radius: 20px;
-    padding: 0px 20px;
-    border: none;
-    margin-bottom: 20px;
-    color: #ffffff; /* Cambiar color del texto */
-}
 </style>  
-
 
 
 <!------------------------------------------------------------------------------------------------------------->
@@ -143,17 +99,18 @@
 <!--                                          Footer                                                         -->   
 
 <nav>
-    <footer class="p-4 text-center end-bottom" style="background-color: #a07f5e;">
-        <div>
-            <h4 class="card-title">Asignatura: Programación en Front-End</h4>
-            <p class="card-text">Copyright © 2024 Empresaurios. Todos los derechos reservados. Esta página web y
-                todo su contenido son propiedad de Empresaurios y su creador Chrystopher Silva, 
-                .Para solicitudes de permisos, contáctenos a <a href="mailto:contacto@empresaurios.com">
-                contacto@empresaurios.com</a>. El nombre y el logotipo de Empresaurios son marcas 
-                registradas y no pueden ser utilizados sin previa autorización por escrito.
-            </p>
+    <div class="card text-center"style="background-color: #a07f5e;">
+        <div class="card-header">
+            <h4>Asignatura: Programación en Front-End</h4> 
         </div>
-    </footer>
+        <div class="card-body">
+        <p class="card-text">Copyright © 2024 Empresaurios. Todos los derechos reservados. Esta página web y
+            todo su contenido son propiedad de Empresaurios y su creador Chrystopher Silva, 
+            .Para solicitudes de permisos, contáctenos a <a href="mailto:contacto@empresaurios.com">
+            contacto@empresaurios.com</a>. El nombre y el logotipo de Empresaurios son marcas 
+            registradas y no pueden ser utilizados sin previa autorización por escrito.</p>
+        </div>
+    </div>
 </nav>
 
 <!------------------------------------------------------------------------------------------------------------->
